JBTM-883 apply the patch and add missing wsdl files.

--- a/XTS/WS-C/pom.xml
+++ b/XTS/WS-C/pom.xml
@@ -29,6 +29,10 @@
       <resource>
         <directory>dev/dd</directory>
       </resource>
+      <resource>
+        <directory>dev/dd/wscoor1.1/wsdl</directory>
+        <targetPath>org/oasis_open/docs/ws_tx/wscoor/_2006/_06/wsdl</targetPath>
+      </resource>
     </resources>
     <plugins>
       <plugin>
