--- a/qa/build.xml
+++ b/qa/build.xml
@@ -56,7 +56,7 @@
 		<include name="mysql-connector-java-5.1.8-bin.jar"/>
 	</fileset>
 
-	<fileset id="ibmdb2.drivers" dir="${driver.home}/DB2_v9/">
+	<fileset id="ibmdb2.drivers" dir="${driver.home}/DB2_v9.7/">
 		<include name="db2jcc*.jar"/>
 	</fileset>
 
@@ -98,11 +98,11 @@
         <get src="${driver.url}/mysql-connector-java-5.1.8-bin.jar"
              dest="${driver.home}/mysql-connector-java-5.1.8-bin.jar"/>
 
-        <mkdir dir="${driver.home}/DB2_v9"/>
-        <get src="${driver.url}/DB2_v9/db2jcc.jar"
-             dest="${driver.home}/DB2_v9/db2jcc.jar"/>
-        <get src="${driver.url}/DB2_v9/db2jcc_license_cu.jar"
-             dest="${driver.home}/DB2_v9/db2jcc_license_cu.jar"/>
+        <mkdir dir="${driver.home}/DB2_v9.7"/>
+        <get src="${driver.url}/DB2_v9.7/db2jcc.jar"
+             dest="${driver.home}/DB2_v9.7/db2jcc.jar"/>
+        <get src="${driver.url}/DB2_v9.7/db2jcc_license_cu.jar"
+             dest="${driver.home}/DB2_v9.7/db2jcc_license_cu.jar"/>
 
         <mkdir dir="${driver.home}/jConnect-6_0/classes"/>
         <get src="${driver.url}/jConnect-6_0/classes/jconn3.jar"
