--- a/pom.xml
+++ b/pom.xml
@@ -707,6 +707,18 @@
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
+      <modules>
+        <module>common</module>
+        <module>ArjunaCore</module>
+        <module>ArjunaJTA</module>
+        <module>XTS</module>
+        <module>ArjunaJTS</module>
+        <module>rest-tx</module>
+        <module>rhq-plugin</module>
+        <module>txbridge</module>
+        <module>STM</module>
+        <module>narayana-full</module>
+      </modules>
       <build>
         <plugins>
           <plugin>
