--- a/ArjunaJTA/integration/pom.xml
+++ b/ArjunaJTA/integration/pom.xml
@@ -25,7 +25,6 @@
   <packaging>jar</packaging>
   <build>
     <sourceDirectory>../../atsintegration/classes</sourceDirectory>
-<!--
     <testSourceDirectory>../../atsintegration/tests</testSourceDirectory>
     <testResources>
       <testResource>
@@ -35,7 +34,6 @@
         <directory>../../atsintegration/tests/byteman-scripts</directory>
       </testResource>
     </testResources>
--->
     <plugins>
       <plugin>
         <inherited>false</inherited>
@@ -82,6 +80,13 @@
           <excludes>
             <exclude>**/jts/**</exclude>
           </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <useManifestOnlyJar>false</useManifestOnlyJar>
         </configuration>
       </plugin>
     </plugins>
