--- a/XTS/sar/crash-recovery-tests/pom.xml
+++ b/XTS/sar/crash-recovery-tests/pom.xml
@@ -83,6 +83,7 @@
 					 <artifactId>maven-surefire-plugin</artifactId>
 					 <version>2.7.2</version>
 					 <configuration>
+						 <redirectTestOutputToFile>true</redirectTestOutputToFile>
 						 <skip>false</skip>
 					 </configuration>
 				 </plugin>
