--- a/XTS/sar/crash-recovery-tests/pom.xml
+++ b/XTS/sar/crash-recovery-tests/pom.xml
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
-			<version>1.0.0.CR7</version>
+			<version>1.0.0.Final</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
