--- a/XTS/demo-test/pom.xml
+++ b/XTS/demo-test/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <version.jbossas>7.1.1.Final</version.jbossas>
-        <version.arquillian.junit>1.0.0.CR7</version.arquillian.junit>
-        <version.arquillian.drone>1.0.0.CR3</version.arquillian.drone>
+        <version.arquillian.junit>1.0.0.Final</version.arquillian.junit>
+        <version.arquillian.drone>1.0.0.Final</version.arquillian.drone>
         <version.arquillian.ajocado.junit>1.0.0.CR2</version.arquillian.ajocado.junit>
         <version.junit>4.8.2</version.junit>
     </properties>
