--- a/ArjunaJTA/integration/pom.xml
+++ b/ArjunaJTA/integration/pom.xml
@@ -100,6 +100,12 @@
       <groupId>org.jboss</groupId>
       <artifactId>jboss-transaction-spi</artifactId>
       <scope>provided</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.jboss.logging</groupId>
+                        <artifactId>jboss-logging-spi</artifactId>
+                    </exclusion>
+                </exclusions>  
     </dependency>
     <dependency>
       <groupId>org.jboss.ironjacamar</groupId>
