--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -30,6 +30,7 @@
 		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
+            <version>1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
