JBTM-1140 updated to support updated arquillian

--- a/XTS/localjunit/tests/pom.xml
+++ b/XTS/localjunit/tests/pom.xml
@@ -47,7 +47,6 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
-			<version>1.0.0.CR5</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -80,7 +79,7 @@
 			 <dependency>
 				 <groupId>org.jboss.as</groupId>
 				 <artifactId>jboss-as-arquillian-container-managed</artifactId>
-				 <version>7.0.2.Final</version>
+					<version>${jboss-as.version}</version>
 				 <scope>test</scope>
 			 </dependency>
 		 </dependencies>
