--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -15,7 +15,7 @@
 # Location of the JVM to use. Should usually be jdk6. Tweak according to your machine.
 # Note: the version in svn should have the right value for the hudson server - don't check in you own!
 #
-COMMAND_LINE_0=java
+COMMAND_LINE_0=/home/mmusgrov/products/jdk1.6.0_29/bin/java
 # use this form to inherit the java version used by ant:
 #COMMAND_LINE_0=${java.home}${file.separator}bin${file.separator}java
 #COMMAND_LINE_0=/usr/local/jdk1.6.0_24/bin/java
@@ -62,6 +62,9 @@ COMMAND_LINE_10=-DCoordinatorEnvironmentBean.maintainHeuristics=NO
 # so setting a short periodicRecoveryPeriod is no longer useful.
 #COMMAND_LINE_11=-DRecoveryEnvironmentBean.periodicRecoveryPeriod=10
 COMMAND_LINE_11=-DRecoveryEnvironmentBean.recoveryBackoffPeriod=5
+# uncomment to test with the JDK orb
+#COMMAND_LINE_12=-Dcom.sun.CORBA.POA.ORBServerId=1
+#COMMAND_LINE_13=-Dcom.sun.CORBA.POA.ORBPersistentServerPort=12567
 #
 # enable these to debug spawned processes. You may need to pause the test
 # framework in a debugger too, or it may spawn multiple procs on the same
@@ -87,3 +90,4 @@ LOCAL_PARAMETER=
 #LOCAL_PARAMETER=-local
 # CALLS is used by some txcore* tests
 CALLS=10
+
